--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -1,7 +1,7 @@
 nav{
   // padding: 0.3rem 0rem !important;
   //   border-bottom: 1px solid #149ddd !important;
-    background-color: #fdfeff;
+    background-color: whitesmoke;
     transition: 0.3s;
     a {
         font-size: 0.8rem;
