--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,8 +14,7 @@
 
         <script src="{{$site.RelPermalink}}"></script>
         <script src="{{$bootstrap1.RelPermalink}}"></script>
-        <script src="{{$bootstrap2.RelPermalink}}"></script>
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
+        <!-- < src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></> -->
         <script src="https://kit.fontawesome.com/f19a3f2e53.js" crossorigin="anonymous"></script>
     </body>
 </html>
