--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background-color: whitesmoke;
+    background-color: rgb(252, 251, 251);
     position: absolute;
     bottom: 0;
     // border-top: 1px solid #149ddd !important;
