--- a/assets/scss/_default.scss
+++ b/assets/scss/_default.scss
@@ -26,7 +26,7 @@ body{
   }
   @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap');
   font-family: 'Open Sans', sans-serif;
-  background-color: rgb(255, 255, 255);
+  background-color: whitesmoke;
   & > .container:not(footer) {
       flex: 1 0 auto;
   }
