--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -12,7 +12,7 @@
         <div class="col-12 col-md-6 text-center">
             <div class="d-inline-flex py-1 py-md-0 flex-wrap justify-content-center flex-row fw-bolder">
                 {{ range .social  }}
-                <a href="{{ .link }}" target="_blank"><i class="{{ .icon }} fa-2x"></i></a>
+                <a href="{{ .link }}" rel="noopener" target="_blank"><i class="{{ .icon }} fa-2x"></i></a>
                 {{ end }}
             </div>
         </div>
