--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -9,13 +9,18 @@
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0">
                 <div class="wrapper">
-                    <div class="typing-demo1">
+                    <div class="hi" id="hi">
                     Hi!
                     </div>
                 </div>
                 <div class="wrapper">
-                    <div class="typing-demo">
+                    <div class="name" id ="name">
                     I'm Anurag Kar
+                    </div>
+                </div>
+                <div class="wrapper">
+                    <div class="tag" id="tag">
+                    A passionate developer
                     </div>
                 </div>
                 </div>
