--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -1,5 +1,6 @@
 {{ $image := resources.Get "/images/profile/devon.jpeg" }}
 {{ $image = $image.Resize "270x270" }}
+{{ $resume := resources.Get "/pdfs/resume.pdf" }}
 {{ with site.Data.intro }}
 <section id="about" class="about">
 <div class="container">
@@ -14,22 +15,21 @@
     <div class="col-lg-8 pt-4 pt-lg-0 content">
       <h3>{{ .tag }}</h3>
       <p>{{ .description }}</p>
-      <div class="row">
-        <div class="col-lg-6">
+      <p>
+        {{ .description2 }}
+      </p>
+      <div class="row py-3">
+        <div class="col-lg-6 res">
           <i class="{{ .icon }}"></i> {{ .location }}
         </div>
-        <div class="col-lg-6">
-          some
+        <div class="col-lg-6 res">
+          {{ .resumetag }} <a href="{{ $resume.RelPermalink }}"><i class="{{ .downloadicon }}"></i></a>
         </div>
       </div>
-      <!-- <p>
-        Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-        Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-      </p> -->
     </div>
   </div>
 
 </div>
-<!-- <hr class="center-ball"> -->
+<hr class="center-ball">
 </section>
 {{ end }}
