--- a/layouts/partials/resume.html
+++ b/layouts/partials/resume.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-6" data-aos="fade-up">
+      <div class="col-lg-6 py-3">
         <div class="skills">
           <h3 class="resume-title">{{ .topic1 }}</h3>
           {{ range .skills }}
@@ -18,7 +18,6 @@
             {{ end }}
           {{ end }}
         </div>
-
       </div>
       <div class="col-lg-6">
         <h3 class="resume-title">{{ .topic2 }}</h3>
@@ -36,7 +35,6 @@
         {{ end }}
       </div>
     </div>
-
   </div>
 </section>
 {{ end }}
