--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -43,7 +43,7 @@
     // opacity: 0;
     // transition: 1s;
     // animation-name: learn;
-    padding-top: 60px;
+    padding-top: 3rem;
     padding-bottom: 1rem ;
     overflow: hidden;
   }
@@ -155,7 +155,7 @@
     height: 3px;
     width: 70%;
     position: relative;
-    margin: 30px auto;
+    margin: 20px auto 0 auto;
     color: $aqua;
 }
 .skills{
