--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -1,5 +1,7 @@
+// #navbar{
+//   padding: 1rem 0rem !important;
+// }
 nav{
-  // padding: 0.3rem 0rem !important;
   //   border-bottom: 1px solid #149ddd !important;
     background-color: rgb(250, 250, 250);
     transition: 0.3s;
