--- a/layouts/index.blog.html
+++ b/layouts/index.blog.html
@@ -12,7 +12,7 @@
 				  <i class="far fa-clock text-info"></i> {{ .time }} to read
 				</small>
 				<p class="card-text">{{.sample }}</p>
-				<button class="custom-btn btn-11">Read</button>
+				<a href = "{{ .link }}"><button class="custom-btn btn-11">Read</button></a>
 			  </div>
 			  <div class="card-footer text-muted d-flex justify-content-between bg-transparent border-top-0">
 				<div class="views">{{ .date }}
