--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,4 +1,4 @@
-<button class="open-button" id = "mybtn" onclick="openForm()"><i class="fas fa-comment-alt"></i></button>
+<button class="open-button" id="contact" onclick="openForm()"><i class="fas fa-comment-alt"></i></button>
 
 <div class="form-popup" id="myForm">
   <form action="/action_page.php" class="form-container">
@@ -17,6 +17,6 @@
     <input placeholder="Messege" type="text" value="" required>
 
     <button type="submit" class="custom-btn btn11">Submit</button>
-    <!-- <button type="button" class="btn cancel" onclick="closeForm()">Close</button> -->
+
   </form>
 </div>
