--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,16 +1,20 @@
-<!--  Title Tags -->
-<title itemprop="name">{{ .Title }} | {{ .Site.Title }}</title>
-<meta property="og:title" content="{{ .Title }} | {{ .Site.Title }}" />
-<meta name="twitter:title" content="{{ .Title }} | {{ .Site.Title }}" />
-<meta itemprop="name" content="{{ .Title }} | {{ .Site.Title }}" />
-<meta name="application-name" content="{{ .Title }} | {{ .Site.Title }}" />
-<meta property="og:site_name" content="{{ .Site.Params.sitename }}" />
+<meta name="dc.relation" content="{{ .Site.BaseURL }}" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 <!--  Title Tags -->
-<meta name="description" content="{{ .Params.description }}" />
-<meta itemprop="description" content="{{ .Params.description }}" />
-<meta property="og:description" content="{{ .Params.description }}" />
-<meta name="twitter:description" content="{{ .Params.description }}" />
+<title itemprop="name">{{ .Site.Title }}</title>
+<meta property="og:title" content="{{ .Site.Title }}" />
+<meta name="twitter:title" content="{{ .Site.Title }}" />
+<meta itemprop="name" content="{{ .Site.Title }}" />
+<meta name="application-name" content="{{ .Site.Title }}" />
+<meta property="og:site_name" content="{{ .Site.Title }}" />
+
+<!--  description Tags -->
+<meta name="description" content="{{ .Site.Params.Description }}" />
+<meta itemprop="description" content="{{ .Site.Params.Description }}" />
+<meta property="og:description" content="{{ .Site.Params.Description }}" />
+<meta name="twitter:description" content="{{ .Site.Params.Description }}" />
 
 <!--  Links Tags -->
 <base href="{{ .Permalink }}">
@@ -22,42 +26,35 @@
 <!-- Language Tags -->
 <meta property="og:locale" content="{{ .Language.Lang }}">
 <meta name="language" content="{{ .Language.LanguageName }}">
-{{ range .AllTranslations }}
-  <link rel="alternate" hreflang="{{ .Language.Lang }}" href="{{ .Permalink }}" title="{{ .Language.LanguageName }}">
-{{ end }}
 
+{{ $og := resources.Get "metadata/favicon-32x32.png" }}
 <!-- Image Tags -->
-{{ with .Params.image }} 
-  <meta itemprop="image" content="{{ . | absURL }}" />
-  <meta property="og:image" content="{{ . | absURL }}" /> 
-  <meta name="twitter:image" content="{{ . | absURL }}" />
-  <meta name="twitter:image:src" content="{{ . | absURL }}" /> 
-{{ else }}
-  <meta itemprop="image" content="{{ .Site.Params.ogimage | absURL }}" />
-  <meta property="og:image" content="{{ .Site.Params.ogimage | absURL }}" />
-  <meta name="twitter:image" content="{{ .Site.Params.ogimage | absURL }}" />
-  <meta name="twitter:image:src" content="{{ .Site.Params.ogimage | absURL }}" /> 
-{{ end }}
+<meta itemprop="image" content="{{ $og.RelPermalink }}" />
+<meta property="og:image" content="{{ $og.RelPermalink }}" />
+<meta name="twitter:image" content="{{ $og.RelPermalink }}" />
+<meta name="twitter:image:src" content="{{ $og.RelPermalink }}" /> 
+
+<link rel="image" type="image/png" href="{{ $og.RelPermalink }}" />
+<link rel="og:image" type="image/png" href="{{ $og.RelPermalink }}">
+<link rel="twitter:image" type="image/png" href="{{ $og.RelPermalink }}">
+<link rel="twitter:image:src" type="image/png" href="{{ $og.RelPermalink }}">
 
 <!-- Date Tags -->
-<meta property="og:updated_time" content={{ .Lastmod.Format "2006-01-02T15:04:05Z0700" | safeHTML }} />
+<meta property="og:updated_time" content="{{ .Lastmod.Format "2006-01-02T15:04:05Z0700" | safeHTML }}" />
 <link rel="sitemap" type="application/xml" title="Sitemap" href="{{ .Site.BaseURL }}sitemap.xml" /> 
 
-{{ with .OutputFormats.Get "RSS" }}
-  <link href="{{ .Permalink }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title }}" />
-  <link href="{{ .Permalink }}" rel="feed" type="application/rss+xml" title="{{ $.Site.Title }}" />
-{{ end }}
 
 <!-- Search Engine crawlers -->
 <meta name="robots" content="index,follow" /> 
 <meta name="googlebot" content="index,follow" />
 
+{{ $manifest := resources.Get "metadata/manifest.json" }}
 <!-- Manifest File -->
-<link rel="manifest" href="{{ .Site.BaseURL }}manifest.json" />
+<link rel="manifest" href="{{ $manifest.RelPermalink }}" />
 
 <!-- Theme Color -->
-<meta name="theme-color" content="#141414" /> 
-<meta name="msapplication-TileColor" content="#141414" />
+<meta name="theme-color" content="#149ddd" /> 
+<meta name="msapplication-TileColor" content="#149ddd" />
 
 <meta name="keywords" content="" />
 <meta name="imagemode" content="force" />
@@ -70,24 +67,12 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 <meta name="apple-touch-fullscreen" content="yes" /> 
 
-{{/*  <!-- Favicons Tags -->
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="icon" type="image/x-icon" sizes="16x16 32x32" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="152x152" href="/favicons/favicon-152-precomposed.png" />
-<link rel="apple-touch-icon" sizes="144x144" href="/favicons/favicon-144-precomposed.png" />
-<link rel="apple-touch-icon" sizes="120x120" href="/favicons/favicon-120-precomposed.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="/favicons/favicon-114-precomposed.png" />
-<link rel="apple-touch-icon" sizes="180x180" href="/favicons/favicon-180-precomposed.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="/favicons/favicon-72-precomposed.png" />
-<link rel="apple-touch-icon" href="/favicons/favicon-57.png" />
-<link rel="icon" href="/favicons/favicon-32.png" sizes="32x32" />
-<link rel="icon" sizes="192x192" href="/favicons/favicon-192.png" />  */}}
 
-{{ $apple := resources.Get "/favicon/apple-touch-icon.png" }}
-{{ $fav := resources.Get "/favicon/favicon.ico" }}
-{{ $fav1 := resources.Get "/favicon/favicon-16x16.png" }}
-{{ $fav3 := resources.Get "/favicon/favicon-32x32.png" }}
-{{ $sitemanifest := resources.Get "favicon/site.webmanifest" }}
+{{ $apple := resources.Get "metadata/apple-touch-icon.png" }}
+{{ $fav := resources.Get "metadata/favicon.ico" }}
+{{ $fav1 := resources.Get "metadata/favicon-16x16.png" }}
+{{ $fav3 := resources.Get "metadata/favicon-32x32.png" }}
+{{ $sitemanifest := resources.Get "metadata/site.webmanifest" }}
 
 
 <!-- Favicons Tags -->
@@ -96,4 +81,4 @@
 <link rel="apple-touch-icon" sizes="180x180" href="{{ $apple.RelPermalink }}">
 <link rel="icon" type="image/png" sizes="32x32" href="{{ $fav3.RelPermalink }}">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ $fav1.RelPermalink }}">
-<link rel="manifest" href="{[ $sitemanifest.RelPermalink }}">
+<link rel="manifest" href="{{ $sitemanifest.RelPermalink }}">
