--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -1,11 +1,11 @@
-{{ $image := resources.Get "/images/laptop.png" }}
-{{ $image = $image.Resize "270x270" }}
+{{ $image := resources.Get "/images/laptop.avif" }}
+{{/*  {{ $image = $image.Resize "270x270" }}  */}}
 
 <section id="hero" class="hero">
     <div class="container">
         <div class="row">
             <div class="col-lg-4">
-                <img src="{{ $image.RelPermalink }}" class="img-fluid laptop" alt="">
+                <img src="{{ $image.RelPermalink }}" class="img-fluid laptop" alt="Laptop Coding">
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0">
                 <div class="wrapper">
@@ -28,14 +28,3 @@
         </div>
     </div>
 </section>
-
-<!-- <div class="about">
-    <div class="container"> 
-        <div class="profile text-center" id="profile">
-            <div>Hi!</div> 
-            <div> 
-            <span class="mx-3"> I'm Anurag Kar</span>
-            </div>
-        </div>
-    </div>
-</div> -->
