--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,8 +3,6 @@
     {{ partial "meta" . }}
 
     {{ $options := (dict "public/" "css/site.css" "outputStyle" "compressed") }}
-    {{ $styles := resources.Get "scss/site.scss" | resources.ExecuteAsTemplate "style.site.scss" . | toCSS | minify | resources.PostCSS | fingerprint }}
-    {{/*  {{ $css := resources.Get "css/main.css" }}
-    {{ $style := $css | resources.PostCSS }}  */}}
+    {{ $styles := resources.Get "scss/site.scss" | resources.ExecuteAsTemplate "style.site.scss" . | toCSS | minify | fingerprint }}
     <link rel="stylesheet" href="{{ $styles.RelPermalink }}" media="screen">
 </head>
