--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,4 +1,4 @@
-<button class="open-button" id="contact" onclick="openForm()"><i class="fas fa-comment-alt"></i></button>
+<button class="open-button" id="contact" aria-label="contact" onclick="openForm()"><i class="fas fa-comment-alt"></i></button>
 
 <div class="form-popup" id="myForm">
   <form action="/action_page.php" class="form-container">
