--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -1,4 +1,4 @@
-{{ $image := resources.Get "/images/profile/devon.avif" }}
+{{ $image := resources.Get "/images/profile/devon.webp" }}
 {{/*  {{ $image = $image.Resize "270x270" }}  */}}
 {{ $resume := resources.Get "/pdfs/resume.pdf" }}
 {{ with site.Data.intro }}
