--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -1,4 +1,4 @@
-{{ $image := resources.Get "/images/laptop.avif" }}
+{{ $image := resources.Get "/images/laptop.webp" }}
 {{/*  {{ $image = $image.Resize "270x270" }}  */}}
 
 <section id="hero" class="hero">
