--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="{{site.LanguageCode|default `en`}}">
 {{ partial "header" . }}
     <body>
@@ -13,13 +13,10 @@
 
 
         {{ $site := resources.Get "js/site.js" }}
-        {{ $bootstrap1 := resources.Get "js/bootstrap.min.js" }}
-        {{ $bootstrap2 := resources.Get "js/bootstrap.min.js.map" }}
-        
+        {{ $bootstrap := resources.Get "js/bootstrap.min.js" }}
+        {{ $js := slice $site $bootstrap | resources.Concat "js/bundle.js" | resources.Minify }}
 
         <script src="{{$site.RelPermalink}}"></script>
-        <script src="{{$bootstrap1.RelPermalink}}"></script>
-        <script src="{{$bootstrap2.RelPermalink}}"></script>
         <script src="https://kit.fontawesome.com/f19a3f2e53.js" crossorigin="anonymous"></script>
     </body>
 </html>
