--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,22 +1,21 @@
-<button class="open-button" id="contact" aria-label="contact" onclick="openForm()"><i class="fas fa-comment-alt"></i></button>
+{{ with site.Data.contact }}
+<button class="open-button" id="contact" aria-label="contact" onclick="openForm()"><i class="{{ .contactIcon }}"></i></button>
 
 <div class="form-popup" id="myForm">
-  <form action="/action_page.php" class="form-container">
+  <form action="/" class="form-container">
     <div class="row">
       <div class="col">
         <h3>Contact</h3>
       </div>
       <div class="col text-end">
-        <i class="fas fa-times fa-2x" onclick="closeForm()"></i>
+        <i class="{{ .close }}" onclick="closeForm()"></i>
       </div>
     </div>
-    <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Your Email" name="email" required>
-
-    <label for="psw"><b>Your Messege</b></label>
-    <input placeholder="Messege" type="text" value="" required>
-
-    <button type="submit" class="custom-btn btn11">Submit</button>
-
+    <label for="email"><b>{{ .emailid }}</b></label>
+    <input type="text" placeholder="{{ .emailPh }}" name="email" required>
+    <label for="psw"><b>{{ .messege }}</b></label>
+    <input placeholder="{{ .messegePh }}" type="text" value="" required>
+    <button type="submit" class="custom-btn btn11">{{ .send }}</button>
   </form>
 </div>
+{{ end }}
