--- a/layouts/index.project.html
+++ b/layouts/index.project.html
@@ -19,7 +19,7 @@
 							{{ partial "inline-svg" $icon }}
 						{{ end }}
                     </div>
-					<a href="{{ .link }}"><div><button class="custom-btn btn-11">View</button></div></a>
+					<a href="{{ .link }}" target="_blank"><div><button class="custom-btn btn-11">View</button></div></a>
                 </div>
 			  </div>
 			  <!-- <div class="card-footer text-muted d-flex justify-content-between bg-transparent border-top-0">
