--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -78,6 +78,25 @@
     bottom: 0;
     left: 0;
   }
+  .section-title h1 {
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    position: relative;
+    color: #149ddd;
+  }
+  
+  .section-title h1::after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 50px;
+    height: 3px;
+    background: #149ddd;
+    bottom: 0;
+    left: 0;
+  }
   
   .section-title p {
     margin-bottom: 0;
