--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -4,12 +4,12 @@
     {{ $svg := partial "inline-svg" "logo" }}
     <a class="navbar-brand" aria-label="logo" href="/">{{ $svg }}</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-      <i class="fas fa-ellipsis-h"></i>
+       {{ partial "in" .bar }}
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mx-auto">
         {{ range .links }}
-        <li class="nav-item my-2"><a class="nav-link p-1 effect-underline active" aria-current="page" href="{{ .navlink }}"><i class="{{ .icon }}"></i> {{ upper .nav }}</a></li>
+        <li class="nav-item my-2"><a class="nav-link p-1 effect-underline active" aria-current="page" href="{{ .navlink }}">{{ partial "in" .icon }}  {{ upper .nav }}</a></li>
         {{ end }}
       </ul>
     </div>
