--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -25,10 +25,10 @@
       </p>
       <div class="row py-3">
         <div class="col-lg-6 res py-1">
-          <i class="{{ .icon }}"></i> {{ .location }}
+          {{ partial "in" .map }} {{ .location }}
         </div>
         <div class="col-lg-6 res">
-          {{ .resumetag }} <a href="{{ $resume.RelPermalink }}" aria-label="resume"><i class="{{ .downloadicon }}"></i></a>
+          {{ .resumetag }} <a href="{{ $resume.RelPermalink }}" aria-label="resume">{{ partial "in" .download }}</a>
         </div>
       </div>
     </div>
