--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -14,7 +14,7 @@
     <div class="col-lg-8 pt-4 pt-lg-0 content">
       <h3>{{ .tag }}</h3>
       <p>{{ .description }}</p>
-      <p><i><b>Intrests</b>
+      <p><i><b>Interests</b>
         {{ .description2 }}
         </i>
       </p>
