--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,7 +13,8 @@
 
         {{ $site := resources.Get "js/site.js" }}
         {{ $bootstrap := resources.Get "js/bootstrap.min.js" }}
-        {{ $js := slice $site $bootstrap | resources.Concat "js/site.js" | resources.Minify }}
+        {{ $smtp := resources.Get "js/smtp.js" }}
+        {{ $js := slice $site $bootstrap $smtp | resources.Concat "js/site.js" | resources.Minify }}
 
         <script src="{{$js.RelPermalink}}"></script>
     </body>
